RESOLVED FIXED265958
Toggling spellcheck attribute doesn't toggle spelling markers
https://bugs.webkit.org/show_bug.cgi?id=265958
Summary Toggling spellcheck attribute doesn't toggle spelling markers
Tim Nguyen (:ntim)
Reported 2023-12-06 12:31:22 PST
``` <p> <input type="checkbox" switch onchange="enter.spellcheck = this.checked" id="toggle-spellcheck"> <label for="toggle-spellcheck">Toggle hints</label> </p> <input spellcheck="false" value="DEWEWWOEID" id="enter"> ```
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-06 12:31:48 PST
Aditya Keerthi
Comment 2 2023-12-11 08:50:32 PST
EWS
Comment 3 2023-12-12 06:26:38 PST
Committed 271927@main (971fabe99b16): <https://commits.webkit.org/271927@main> Reviewed commits have been landed. Closing PR #21637 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.